objects/GPO_Template__c.object
<CustomObject>
    <fields>
        <fullName>Home_Page__c</fullName>
        <label>Home Page</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Page__c</fullName>
        <label>Member Page</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <label>Template Name</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>GPO Template</label>
    <nameField>
        <label>GPO Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GPO Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>